[gd_scene load_steps=24 format=3 uid="uid://chojoq00uw7ng"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_ucvet"]
[ext_resource type="Script" path="res://Scenes/HUD/UnitMenu.gd" id="2_mulfo"]
[ext_resource type="Texture2D" uid="uid://dex1xjcdq1fv7" path="res://Resources/Textures/UI/rect_container_m.tres" id="3_dp5xs"]
[ext_resource type="Texture2D" uid="uid://de76st4td7ff1" path="res://Assets/Towers/tower_icons_m.png" id="4_65e54"]
[ext_resource type="Texture2D" uid="uid://bxlxlgnldo7ci" path="res://Assets/Towers/tier_icons_m.png" id="5_axr2n"]
[ext_resource type="PackedScene" uid="uid://b1jo2a8vlvwlb" path="res://Scenes/HUD/TowerMenu/TowerSpecialContainer.tscn" id="6_njlch"]
[ext_resource type="PackedScene" uid="uid://8xsklkw4jhlw" path="res://Scenes/HUD/Buttons/EmptyUnitButton.tscn" id="7_0rpr1"]
[ext_resource type="PackedScene" uid="uid://b6l4hi00yx7js" path="res://Scenes/HUD/TowerInfo.tscn" id="7_jx6gy"]
[ext_resource type="StyleBox" uid="uid://c2wcu6a3ywhdl" path="res://Resources/Theme/UnitMenu/unit_level_label_normal.tres" id="8_jstgw"]
[ext_resource type="PackedScene" uid="uid://b1l5uiun5nhhx" path="res://Scenes/HUD/CreepInfo.tscn" id="8_rim5q"]
[ext_resource type="Texture2D" uid="uid://60qc7jcvckhh" path="res://Assets/UI/HUD/misc3.png" id="9_02rfc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ue77a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6gup"]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_bottom = 5.0
texture = ExtResource("3_dp5xs")
texture_margin_left = 13.9504
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 13.9504
region_rect = Rect2(1283, 192, 139, 154)
modulate_color = Color(0.588235, 0.588235, 0.588235, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ro0"]
atlas = ExtResource("4_65e54")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6o0y"]
atlas = ExtResource("5_axr2n")
region = Rect2(256, 0, 64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gadtu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_3p2ki"]
device = -1
keycode = 85
unicode = 117

[sub_resource type="Shortcut" id="Shortcut_gi5f6"]
events = [SubResource("InputEventKey_3p2ki")]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gno2"]
atlas = ExtResource("9_02rfc")
region = Rect2(0, 128, 128, 128)
margin = Rect2(10, 10, 0, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yslek"]
atlas = ExtResource("9_02rfc")
region = Rect2(256, 256, 128, 128)

[sub_resource type="InputEventKey" id="InputEventKey_8sgsd"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_4gk67"]
events = [SubResource("InputEventKey_8sgsd")]

[sub_resource type="AtlasTexture" id="AtlasTexture_m846m"]
atlas = ExtResource("9_02rfc")
region = Rect2(128, 256, 128, 128)
margin = Rect2(10, 10, 20, 20)

[node name="UnitMenu" type="PanelContainer" node_paths=PackedStringArray("_upgrade_button", "_sell_button", "_info_button", "_reset_sell_button_timer", "_items_box_container", "_title_label", "_unit_info_label", "_unit_icon_texture", "_unit_specials_container", "_unit_level_label", "_unit_control_menu", "_unit_stats_menu", "_creep_stats_menu", "_buffs_container", "_info_label", "_specials_container", "_tier_icon_texture", "_specials_label", "_inventory_empty_slots", "_inventory", "_main_container", "_specials_scroll_container")]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -699.0
offset_top = -444.0
offset_right = -69.0
offset_bottom = 446.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_force_pass_scroll_events = false
theme = ExtResource("1_ucvet")
theme_override_styles/panel = SubResource("StyleBoxEmpty_ue77a")
script = ExtResource("2_mulfo")
_upgrade_button = NodePath("MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/TowerUpgradeButton")
_sell_button = NodePath("MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/SellTowerButton")
_info_button = NodePath("MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/UnitInfoButton")
_reset_sell_button_timer = NodePath("ResetSellButtonTimer")
_items_box_container = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/ItemsContainer")
_title_label = NodePath("MainContainer/MarginContainer2/TitleLabel")
_unit_info_label = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer/SpecialsLabel")
_unit_icon_texture = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer/IconContainer/UnitIcon")
_unit_specials_container = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer/UnitSpecialContainer")
_unit_level_label = NodePath("MainContainer/MarginContainer/MarginContainer/VBoxContainer2/UnitLevelLabel")
_unit_control_menu = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu")
_unit_stats_menu = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitStatsMenu")
_creep_stats_menu = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/CreepStatsMenu")
_buffs_container = NodePath("MainContainer/MarginContainer3/BuffContainer")
_info_label = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer2/InfoLabel")
_specials_container = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer")
_tier_icon_texture = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer/MarginContainer/AspectRatioContainer/TierIcon")
_specials_label = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer/SpecialsLabel")
_inventory_empty_slots = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots")
_inventory = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory")
_main_container = NodePath("MainContainer")
_specials_scroll_container = NodePath("MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer")

[node name="ResetSellButtonTimer" type="Timer" parent="."]

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer"]
show_behind_parent = true
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_bottom = -34

[node name="TitleLabel" type="Label" parent="MainContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_j6gup")
text = "Unit"

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="MainContainer/MarginContainer"]
custom_minimum_size = Vector2(630, 809)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_type_variation = &"MainPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="UnitControlMenu" type="VBoxContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InfoContainer" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 10

[node name="IconContainer" type="AspectRatioContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
alignment_vertical = 0

[node name="UnitIcon" type="TextureRect" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer/IconContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_n6ro0")

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -10

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="TierIcon" type="TextureRect" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer/MarginContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_h6o0y")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InfoLabel" type="RichTextLabel" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
text = "[img=32x32]res://Resources/Textures/UI/Icons/gold_icon.tres[/img] [color=ff4500ff]30[/color] [img=32x32]res://Resources/Textures/UI/Icons/food_icon.tres[/img] [color=GOLD]0[/color]
[color=LIGHT_BLUE]Basic nature tower with a slightly increased chance to critical strike.[/color]
[color=YELLOW]Author:[/color] gex
[color=YELLOW]Element:[/color] [color=32cd32ff]Nature[/color]
[color=YELLOW]Attack:[/color] [color=GOLD]28[/color] dps, [color=d2b48cff]Physical[/color], [color=GOLD]800[/color] range
"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gadtu")

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/InfoContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelTitle"
theme_override_colors/font_color = Color(0.945313, 0.945313, 0, 1)
text = "Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialsContainer" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gadtu")

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelTitle"
theme_override_colors/font_color = Color(0.945313, 0.945313, 0, 1)
text = "Specials"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2"]
layout_mode = 2

[node name="SpecialsContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpecialsLabel" type="RichTextLabel" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer"]
layout_mode = 2
bbcode_enabled = true
text = "	[color=GOLD]320[/color] AoE: [color=GOLD]50%[/color] damage
[color=GOLD]+15%[/color] damage to mass ([color=GOLD]+1%[/color]/lvl)
[color=GOLD]+15%[/color] damage to humanoid ([color=GOLD]+1%[/color]/lvl)"
fit_content = true

[node name="UnitSpecialContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/SpecialsContainer/MarginContainer2/ScrollContainer/SpecialsContainer" instance=ExtResource("6_njlch")]
visible = false
layout_mode = 2

[node name="Inventory" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu"]
custom_minimum_size = Vector2(0, 93)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gadtu")

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelTitle"
theme_override_colors/font_color = Color(0.945313, 0.945313, 0, 1)
text = "Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="InventoryEmptySlots" type="HBoxContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="EmptyUnitButton" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="EmptyUnitButton2" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="EmptyUnitButton3" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="EmptyUnitButton4" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="EmptyUnitButton5" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="EmptyUnitButton6" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_0rpr1")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="ItemsContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2"]
layout_mode = 2

[node name="UnitStatsMenu" type="ScrollContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 0
horizontal_scroll_mode = 0

[node name="TowerInfo" parent="MainContainer/MarginContainer/Panel/MarginContainer/UnitStatsMenu" instance=ExtResource("7_jx6gy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_force_pass_scroll_events = false

[node name="CreepStatsMenu" type="ScrollContainer" parent="MainContainer/MarginContainer/Panel/MarginContainer"]
visible = false
layout_mode = 2

[node name="CreepInfo" parent="MainContainer/MarginContainer/Panel/MarginContainer/CreepStatsMenu" instance=ExtResource("8_rim5q")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = -20
theme_override_constants/margin_top = -20
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="UnitLevelLabel" type="Label" parent="MainContainer/MarginContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("8_jstgw")
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TowerUpgradeButton" type="Button" parent="MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Upgrade"
focus_mode = 0
theme_type_variation = &"CircleButton"
shortcut = SubResource("Shortcut_gi5f6")
icon = SubResource("AtlasTexture_0gno2")
expand_icon = true

[node name="UnitInfoButton" type="Button" parent="MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Stat Details"
focus_mode = 0
theme_type_variation = &"CircleButton"
icon = SubResource("AtlasTexture_yslek")
expand_icon = true

[node name="SellTowerButton" type="Button" parent="MainContainer/MarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Sell"
focus_mode = 0
theme_type_variation = &"CircleButton"
shortcut = SubResource("Shortcut_4gk67")
icon = SubResource("AtlasTexture_m846m")
expand_icon = true

[node name="MarginContainer3" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="BuffContainer" type="GridContainer" parent="MainContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 8

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 15

[node name="CloseButton" type="Button" parent="MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"CircleButton"
theme_override_font_sizes/font_size = 32
text = " x "

[connection signal="gui_input" from="MainContainer/MarginContainer/Panel/MarginContainer/UnitControlMenu/Inventory/MarginContainer2/ItemsContainer" to="." method="_on_items_container_gui_input"]
[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
